# Chargecraft

./: CMakeLists.txt  Makefile  README.md  csv_loader.c  csv_loader.h  ev_demo  events.c  events.h  izivia_debug.csv  izivia_tp_min.json  izivia_tp_subset.csv  json_loader.c  json_loader.h  main.c  nary.c  nary.h  queue.c  queue.h  rules.c  rules.h  sanity_check_slots.c  sanity_check_slots.h  scenario.c  scenario.h  slist.c  slist.h  stack.c  stack.h  station_index.c  station_index.h  veh_mru.c  veh_mru.h
